# pvrtc_decoder

./: .gitignore  MANIFEST.in  README.md  pvrtc_decoder.pyx  setup.cfg  setup.py
test/: README.md  SpriteAtlasTexture-SoldierSkinIcon (Group 2)-256x256-fmt32  SpriteAtlasTexture-SoldierSkinIcon (Group 2)-256x256-fmt32.json  test.py
