[metadata]
name=pvrtc_decoder
version = 1.0.0
author=K0lb3
url = https://github.com/K0lb3/pvrtc_decoder/
download_url = https://github.com/K0lb3/pvrtc_decoder/tarball/master
description=A PVRTC decoder for PIL
description-file = README.md
license = MIT
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: zlib/libpng License
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Multimedia :: Graphics


[flake8]
ignore = W191